# pgfplots

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clippy.yml  rust.yml
examples/: README.md  fitted_line.rs  rectangle_integration.rs  snowflake.rs
src/: axis.rs  lib.rs  tests.rs
src/axis/: plot.rs  tests.rs
src/axis/plot/: color.rs  coordinate.rs  tests.rs
src/axis/plot/coordinate/: tests.rs
