[package]
name = "pgfplots"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A Rust library to generate publication-quality figures"
readme = "README.md"
repository = "https://github.com/DJDuque/pgfplots"
keywords = ["pgfplots", "plotting", "plot", "visualization", "latex"]
categories = ["visualization"]
documentation = "https://docs.rs/pgfplots"

[dependencies]
tectonic = { version = "0.9", optional = true }
tempfile = { version = "3", optional = true }
opener = { version = "0.5", optional = true }

[features]
inclusive = ["dep:tectonic", "dep:tempfile", "dep:opener"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
