[package]
name = "pgfplots"
version = "0.4.1" # Remember to also change this in the README.md
edition = "2021"
license = "MIT"
description = "A Rust library to generate publication-quality figures"
readme = "README.md"
repository = "https://github.com/DJDuque/pgfplots"
keywords = ["pgfplots", "plotting", "plot", "visualization", "latex"]
categories = ["visualization"]
documentation = "https://docs.rs/pgfplots"

[dependencies]
opener = "0.5"
rand = "0.8"
tectonic = { version = "0.12", optional = true }
tempfile = "3"
thiserror = "1"

[features]
inclusive = ["dep:tectonic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
